--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "chakra-dayzed-datepicker": "^0.1.4",
+    "date-fns": "^2.27.0",
+    "dayzed": "^3.2.2",
     "framer-motion": "^4.1.17",
     "next": "12.0.4",
     "react": "17.0.2",
