--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-table": "^7.7.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
