--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
-    "chakra-dayzed-datepicker": "^0.1.4",
-    "date-fns": "^2.27.0",
-    "dayzed": "^3.2.2",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "12.0.4",
     "react": "17.0.2",
+    "react-date-picker": "^8.3.6",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-table": "^7.7.0"
