--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-date-picker": "^8.3.6",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
     "react-table": "^7.7.0"
   },
