--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
-    "react-table": "^7.7.0"
+    "react-table": "^7.7.0",
+    "swr": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
