--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^4.1.17",
     "next": "12.0.4",
     "pg": "^8.7.1",
+    "pg-format": "^1.0.4",
     "react": "17.0.2",
     "react-date-picker": "^8.3.6",
     "react-dom": "17.0.2",
